[gd_scene load_steps=19 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/images/Player.png" type="Texture" id=2]
[ext_resource path="res://Player/sounds/Jump2.wav" type="AudioStream" id=3]
[ext_resource path="res://Player/sounds/Hit_Hurt2.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/sounds/Randomize21.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/sounds/Powerup11.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/sounds/mix.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/sounds/Explosion28.wav" type="AudioStream" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "fall",
"speed": 6.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 8, 15 )

[sub_resource type="CircleShape2D" id=10]
radius = 8.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 1, 8.1 )
shape = SubResource( 10 )

[node name="RayCastBottom" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCastFront" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[node name="LiftPosition" type="Position2D" parent="."]
position = Vector2( 0, -32 )

[node name="LiftTween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 1152

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PowerupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LockedDoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="UnlockDoorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="tween_all_completed" from="LiftTween" to="." method="_on_LiftTween_tween_all_completed"]
